--- a/index_main.html
+++ b/index_main.html
@@ -137,7 +137,7 @@
 					</div>
 					<!-- profile buttons -->
 					<div class="lnks">
-						<a href="#" class="lnk">
+						<a href="https://novoresume.com/a/saxena.shubhank.19.1" class="lnk">
 							<span class="text">Download CV</span>
 							<span class="ion ion-archive"></span>
 						</a>
